fixed the information about footer and align tags p in the services to justify

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
 					<li><a href="#clientes">Clientes</a></li>
 				</ul>
 			</div>
-			<p id="direitos">KWCold Refrigeração &copy; Todos os direitos reservaods - 2022</p>
+			<p id="direitos">KWCold Refrigeração &copy; Todos os direitos reservados - 2022</p>
 		</footer>
 	</body>
 </html>
