created the media queries

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 						</li>
 						<li class="nav-item">
 							<a
-								class="nav-link active"
+								class="nav-link active element"
 								aria-current="page"
 								href="https://kwcoldrefrigeracao.mercadoshops.com.br/"
 								target="_blank"
-								>Produtos</a
+								>Loja On-Line</a
 							>
 						</li>
 						<li class="nav-item">
@@ -506,9 +506,9 @@
 					referrerpolicy="no-referrer-when-downgrade"
 				></iframe>
 
-				<p style="text-align: center;">
+				<p>
 					Endereço: Rua Dr. Fausto Ribeiro de Carvalho, 271 Jardim Orlandina -
-					São bernardo do Campo - SP - Cep: 09632-030
+					São Bernardo do Campo - SP - Cep: 09632-030
 				</p>
 			</div>
 			<div class="contato">
@@ -541,7 +541,7 @@
 				</address>
 				<ul class="filtro">
 					<li><a href="#topo">Sobre</a></li>
-					<li><a href="https://kwcoldrefrigeracao.mercadoshops.com.br/" target="_blank">Produtos</a></li>
+					<li><a href="https://kwcoldrefrigeracao.mercadoshops.com.br/" target="_blank" class="element">Loja On-Line</a></li>
 					<li><a href="#servicos">Serviços</a></li>
 					<li><a href="#clientes">Clientes</a></li>
 				</ul>
