pushed the border in a loja online and put it on center

--- a/index.html
+++ b/index.html
@@ -21,32 +21,34 @@
 		></script>
 		<!-- css -->
 		<link rel="stylesheet" href="./css/styles.css" />
+
+		<!-- icon site -->
+		<link rel="icon" type="imagem/ico" href="./img/img_2.png" >
 	</head>
 	<body>
 		<!-- nav -->
 		<nav class="navbar navbar-expand-lg" id="topo">
 			<div id="div-img-kwcold">
-				<img src="./img/logo kwcold_s_fundo.png" alt="logo-kwcold" id="logo" />
+				<img src="./img/img_2.png" alt="logo-kwcold" id="logo" />
 			</div>
-			<button
-					class="navbar-toggler"
-					type="button"
-					data-bs-toggle="collapse"
-					data-bs-target="#navbarSupportedContent"
-					aria-controls="navbarSupportedContent"
-					aria-expanded="false"
-					aria-label="Toggle navigation"
-				>
-					<span class="navbar-toggler-icon"></span>
-				</button>
+
+
+					<button
+							class="navbar-toggler"
+							type="button"
+							data-bs-toggle="collapse"
+							data-bs-target="#navbarSupportedContent"
+							aria-controls="navbarSupportedContent"
+							aria-expanded="false"
+							aria-label="Toggle navigation"
+						>
+							<span class="navbar-toggler-icon"></span>
+						</button>
+
+
 			<div class="container-fluid">
 				<div class="collapse navbar-collapse ms-2" id="navbarSupportedContent">
-					<ul class="navbar-nav me-auto mb-2 mb-lg-0 div-itens">
-						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#sobre"
-								>Sobre</a
-							>
-						</li>
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0 div-itens-central">
 						<li class="nav-item">
 							<a
 								class="nav-link active element"
@@ -56,6 +58,22 @@
 								>Loja On-Line</a
 							>
 						</li>
+					</ul>
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0 div-itens">
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="#sobre"
+								>Sobre</a
+							>
+						</li>
+						<!-- <li class="nav-item">
+							<a
+								class="nav-link active element"
+								aria-current="page"
+								href="https://kwcoldrefrigeracao.mercadoshops.com.br/"
+								target="_blank"
+								>Loja On-Line</a
+							>
+						</li> -->
 						<li class="nav-item">
 							<a class="nav-link active" aria-current="page" href="#servicos"
 								>Serviços</a
@@ -184,7 +202,6 @@
 								<ul>
 									<li>Serviço técnico autorizado “IMBERA DO BRASIL”</li>
 									<li>Serviço técnico autorizado “TECAPPLY Platinum”</li>
-									<li>Serviço técnico autorizado “FRUTTI LIFE”</li>
 									<li>Serviço técnico autorizado “METALFRIO/SOLUTIONS”</li>
 									<li>Serviço técnico autorizado “INGECOLD”</li>
 								</ul>
@@ -481,9 +498,6 @@
 					</div>
 					<div class="div-img">
 						<img src="./img/ambev.png" alt="logo-ambev" class="img" title="Ambev"/>
-					</div>
-					<div class="div-img">
-						<img src="./img/fruttilife.png" alt="logo-fruttilife" class="img" title="FruttiLife"/>
 					</div>
 					<div class="div-img">
 						<img src="./img/ingecold.webp" alt="logo-ingecold" class="img" title="Ingecold"/>
