create the meta tag description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="kWCold Refrigeração, uma empresa que presta serviços de engenharia no campo da termodinâmica, compreendendo a instalação de sistemas de AR CONDICIONADO CENTRAL, VENTILAÇÃO, REFRIGERAÇÃO e serviços correlatos, bem como MANUTENÇÃO E ASSISTÊNCIA TÉCNICA nessas áreas.">
 		<title>KWCold</title>
 		<!-- bootstrap -->
 		<!-- CSS only -->
