fized some tags and put the address of the kwcold shops to main image

--- a/index.html
+++ b/index.html
@@ -27,14 +27,24 @@
 		<link rel="stylesheet" href="./css/styles.css" />
 
 		<!-- icon site -->
-		<link rel="icon" type="imagem/ico" href="./img/img_2.png" />
+		<link rel="icon" type="imagem/ico" href="./img/favicon_1.ico" />
 	</head>
 
 	<body>
 		<!-- nav -->
 		<nav class="navbar navbar-expand-lg" id="topo">
 			<div id="div-img-kwcold">
-				<img src="./img/img_2.png" alt="logo-kwcold" id="logo" />
+				<a
+					href="https://kwcoldrefrigeracao.mercadoshops.com.br/"
+					target="_blank"
+				>
+					<img
+						src="./img/img_2.png"
+						alt="logo-kwcold"
+						id="logo"
+						title="KWCOLD"
+					/>
+				</a>
 			</div>
 
 			<button
