--- a/index.html
+++ b/index.html
@@ -574,7 +574,10 @@
 				<div>
 					<h6>Contato</h6>
 					<address>
-						<p>Email: <a href="mailto:kwcold@gmail.com">kwcold@gmail.com</a></p>
+						<p>
+							Email:
+							<a href="mailto:atendimento@kwcold.com">kwcold@gmail.com</a>
+						</p>
 						<p>Telefone: <a href="tel:+5511947423889">(11) 9.4742-3889</a></p>
 						<p>
 							Whatsapp:
