alter the email

--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
 					<address>
 						<p>
 							Email:
-							<a href="mailto:atendimento@kwcold.com">kwcold@gmail.com</a>
+							<a href="mailto:atendimento@kwcold.com">atendimento@kwcold.com</a>
 						</p>
 						<p>Telefone: <a href="tel:+5511947423889">(11) 9.4742-3889</a></p>
 						<p>
