incluido serviço de venda e reforma de equipamentos com cards e imagens dos produtos

--- a/index.html
+++ b/index.html
@@ -27,28 +27,13 @@
 	<!-- nav -->
 	<nav class="navbar navbar-expand-lg" id="topo">
 		<div id="div-img-kwcold">
-			<a
-				href="https://kwcoldrefrigeracao.mercadoshops.com.br/"
-				target="_blank"
-			>
-				<img
-					src="./img/img_2.png"
-					alt="logo-kwcold"
-					id="logo"
-					title="KWCOLD"
-				/>
+			<a href="https://kwcoldrefrigeracao.mercadoshops.com.br/" target="_blank">
+				<img src="./img/img_2.png" alt="logo-kwcold" id="logo" title="KWCOLD" />
 			</a>
 		</div>
 
-		<button
-			class="navbar-toggler"
-			type="button"
-			data-bs-toggle="collapse"
-			data-bs-target="#navbarSupportedContent"
-			aria-controls="navbarSupportedContent"
-			aria-expanded="false"
-			aria-label="Toggle navigation"
-		>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 
@@ -56,20 +41,13 @@
 			<div class="collapse navbar-collapse ms-2" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0 div-itens-central">
 					<li class="nav-item">
-						<a
-							class="nav-link active element"
-							aria-current="page"
-							href="https://kwcoldrefrigeracao.mercadoshops.com.br/"
-							target="_blank"
-							>Loja On-Line</a
-						>
+						<a class="nav-link active element" aria-current="page"
+							href="https://kwcoldrefrigeracao.mercadoshops.com.br/" target="_blank">Loja On-Line</a>
 					</li>
 				</ul>
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0 div-itens">
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#sobre"
-							>Sobre</a
-						>
+						<a class="nav-link active" aria-current="page" href="#sobre">Sobre</a>
 					</li>
 					<!-- <li class="nav-item">
 						<a
@@ -81,19 +59,13 @@
 						>
 					</li> -->
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#servicos"
-							>Serviços</a
-						>
+						<a class="nav-link active" aria-current="page" href="#servicos">Serviços</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#clientes"
-							>Clientes</a
-						>
+						<a class="nav-link active" aria-current="page" href="#clientes">Clientes</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#contato"
-							>Contato</a
-						>
+						<a class="nav-link active" aria-current="page" href="#contato">Contato</a>
 					</li>
 				</ul>
 			</div>
@@ -410,6 +382,62 @@
 								equipados com todo instrumental e ferramental necessários,
 								para uma eficaz execução dos trabalhos.
 							</p>
+						</div>
+					</div>
+				</div>
+				<div class="accordion-item">
+					<h2 class="accordion-header" id="flush-headingSeven">
+						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+							data-bs-target="#flush-collapseSeven" aria-expanded="false"
+							aria-controls="flush-collapseSeven">
+							Venda e reforma de equipamentos
+						</button>
+					</h2>
+					<div id="flush-collapseSeven" class="accordion-collapse collapse"
+						aria-labelledby="flush-headingSeven" data-bs-parent="#accordionFlushExample">
+						<div class="accordion-body img-vendas">
+							<div class="card" style="width: 18rem;">
+								<img src="./img/WhatsApp Image 2023-01-24 at 13.19.19 (1).jpeg" class="card-img-top"
+									alt="...">
+								<div class="card-body">
+									<p class="card-text">Informações do produto.</p>
+								</div>
+							</div>
+							<div class="card" style="width: 18rem;">
+								<img src="./img/WhatsApp Image 2023-01-24 at 13.19.19 (2).jpeg" class="card-img-top"
+									alt="...">
+								<div class="card-body">
+									<p class="card-text">Informações do produto.</p>
+								</div>
+							</div>
+							<div class="card" style="width: 18rem;">
+								<img src="./img/WhatsApp Image 2023-01-24 at 13.19.19 (3).jpeg" class="card-img-top"
+									alt="...">
+								<div class="card-body">
+									<p class="card-text">Informações do produto.</p>
+								</div>
+							</div>
+							<div class="card" style="width: 18rem;">
+								<img src="./img/WhatsApp Image 2023-01-24 at 13.19.19 (4).jpeg" class="card-img-top"
+									alt="...">
+								<div class="card-body">
+									<p class="card-text">Informações do produto.</p>
+								</div>
+							</div>
+							<div class="card" style="width: 18rem;">
+								<img src="./img/WhatsApp Image 2023-01-24 at 13.19.19 (5).jpeg" class="card-img-top"
+									alt="...">
+								<div class="card-body">
+									<p class="card-text">Informações do produto.</p>
+								</div>
+							</div>
+							<div class="card" style="width: 18rem;">
+								<img src="./img/WhatsApp Image 2023-01-24 at 13.19.19 (6).jpeg" class="card-img-top"
+									alt="...">
+								<div class="card-body">
+									<p class="card-text">Informações do produto.</p>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
