incluido hover nas imagens com css e acrecentado titulo das imagens. tambem retirado informações das imagens

--- a/index.html
+++ b/index.html
@@ -396,47 +396,53 @@
 					<div id="flush-collapseSeven" class="accordion-collapse collapse"
 						aria-labelledby="flush-headingSeven" data-bs-parent="#accordionFlushExample">
 						<div class="accordion-body img-vendas">
-							<div class="card" style="width: 18rem;">
-								<img src="./img/WhatsApp Image 2023-01-24 at 13.19.19 (1).jpeg" class="card-img-top"
-									alt="...">
-								<div class="card-body">
-									<p class="card-text">Informações do produto.</p>
-								</div>
+							<div class="text-vendas">
+								<p>Reformamamos e personalizamos equipamentos:</p>
 							</div>
-							<div class="card" style="width: 18rem;">
-								<img src="./img/WhatsApp Image 2023-01-24 at 13.19.19 (2).jpeg" class="card-img-top"
-									alt="...">
-								<div class="card-body">
-									<p class="card-text">Informações do produto.</p>
+							<div class="div-vendas">
+								<div class="card card-vendas" style="width: 18rem;">
+									<img src="./img/WhatsApp Image 2023-01-24 at 13.19.19 (1).jpeg" class="card-img-top"
+										alt="...">
+									<!-- <div class="card-body">
+										<p class="card-text">Informações do produto.</p>
+									</div> -->
 								</div>
-							</div>
-							<div class="card" style="width: 18rem;">
-								<img src="./img/WhatsApp Image 2023-01-24 at 13.19.19 (3).jpeg" class="card-img-top"
-									alt="...">
-								<div class="card-body">
-									<p class="card-text">Informações do produto.</p>
+								<div class="card card-vendas" style="width: 18rem;">
+									<img src="./img/WhatsApp Image 2023-01-24 at 13.19.19 (2).jpeg" class="card-img-top"
+										alt="...">
+									<!-- <div class="card-body">
+										<p class="card-text">Informações do produto.</p>
+									</div> -->
 								</div>
-							</div>
-							<div class="card" style="width: 18rem;">
-								<img src="./img/WhatsApp Image 2023-01-24 at 13.19.19 (4).jpeg" class="card-img-top"
-									alt="...">
-								<div class="card-body">
-									<p class="card-text">Informações do produto.</p>
+								<div class="card card-vendas" style="width: 18rem;">
+									<img src="./img/WhatsApp Image 2023-01-24 at 13.19.19 (3).jpeg" class="card-img-top"
+										alt="...">
+									<!-- <div class="card-body">
+										<p class="card-text">Informações do produto.</p>
+									</div> -->
 								</div>
-							</div>
-							<div class="card" style="width: 18rem;">
-								<img src="./img/WhatsApp Image 2023-01-24 at 13.19.19 (5).jpeg" class="card-img-top"
-									alt="...">
-								<div class="card-body">
-									<p class="card-text">Informações do produto.</p>
+								<div class="card card-vendas" style="width: 18rem;">
+									<img src="./img/WhatsApp Image 2023-01-24 at 13.19.19 (4).jpeg" class="card-img-top"
+										alt="...">
+									<!-- <div class="card-body">
+										<p class="card-text">Informações do produto.</p>
+									</div> -->
 								</div>
-							</div>
-							<div class="card" style="width: 18rem;">
-								<img src="./img/WhatsApp Image 2023-01-24 at 13.19.19 (6).jpeg" class="card-img-top"
-									alt="...">
-								<div class="card-body">
-									<p class="card-text">Informações do produto.</p>
+								<div class="card card-vendas" style="width: 18rem;">
+									<img src="./img/WhatsApp Image 2023-01-24 at 13.19.19 (5).jpeg" class="card-img-top"
+										alt="...">
+									<!-- <div class="card-body">
+										<p class="card-text">Informações do produto.</p>
+									</div> -->
 								</div>
+								<div class="card card-vendas" style="width: 18rem;">
+									<img src="./img/WhatsApp Image 2023-01-24 at 13.19.19 (6).jpeg" class="card-img-top"
+										alt="...">
+									<!-- <div class="card-body">
+										<p class="card-text">Informações do produto.</p>
+									</div> -->
+								</div>
+
 							</div>
 						</div>
 					</div>
